<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_bold"
            android:text="Welcome,"
            android:textAlignment="center"
            android:textColor="@color/green_vibrant"
            android:textSize="40sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@color/green_vibrant"
            android:fontFamily="@font/play_bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:id="@+id/title_profile"
            android:text="@string/updating_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="155dp"
        android:id="@+id/linearOfCardview">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardMaxElevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Username:"
                    android:fontFamily="@font/play_regular"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textColor="@color/green_vibrant"
                    android:textSize="17sp">
                </TextView>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/user_name"
                    android:text="@string/updating_username"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/play_regular"
                    android:lines="1"
                    android:text="Surname:"
                    android:textAlignment="center"
                    android:textColor="@color/green_vibrant"
                    android:textSize="17sp"
                    android:textStyle="italic" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/sur_name"
                    android:text="@string/updating_surname"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Birthday:"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textSize="17sp">
                </TextView>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/birth_day"
                    android:text="@string/updating_birthday"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Email:"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="17sp">
                </TextView>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/e_mail"
                    android:text="@string/updating_email"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Password:"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="17sp">
                </TextView>

                <EditText
                    android:id="@+id/pass_word"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/play_regular"
                    android:inputType="textPassword"
                    android:text="@string/updating_password"
                    android:textAlignment="center"
                    android:textColor="@color/green_vibrant"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Coins:"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="17sp">
                </TextView>

                <EditText
                    android:id="@+id/co_ins"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/play_regular"
                    android:inputType="text"
                    android:text="@string/updating_coins"
                    android:textAlignment="center"
                    android:textColor="@color/green_vibrant"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearOfSentence"
        app:layout_constraintTop_toBottomOf="@+id/linearOfCardview">
        <TextView
            android:id="@+id/textOpeningGadgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="See your gadgets or change your password:"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="625dp"
            android:lines="1"
            android:textColor="@color/green_vibrant"
            android:fontFamily="@font/play_regular"
            android:textSize="20sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearOfSeeGadgetsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearOfSentence">

        <Button
            android:id="@+id/openGadgetsUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="660dp"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:fontFamily="@font/play_regular"
            android:onClick="openGadgetsOfUser"
            android:text="GADGETS"
            android:layout_marginLeft="50dp"
            android:textColor="@color/green_vibrant"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textOpeningGadgets" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearOfSeeGadgetsButton">
        <Button
            android:id="@+id/updateUserInfo"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_shadow_start_color"
            android:fontFamily="@font/play_regular"
            android:onClick="openUpdateOfUser"
            android:text="DO YOU WANT TO CHANGE YOUR PASSWORD?"
            android:textColor="@color/green_vibrant"
            android:textStyle="bold"
            android:layout_marginTop="650dp"
            android:layout_marginLeft="170dp"
            app:layout_constraintTop_toBottomOf="@+id/openGadgetsUser" />


    </LinearLayout>






    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="680dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="Return"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />


</RelativeLayout>