<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back_dif">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textColor="@color/green_vibrant"
            android:fontFamily="@font/play_bold"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="70dp">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:textStyle="bold"
            android:textColor="@color/green_vibrant"
            android:fontFamily="@font/play_bold"
            android:textSize="40sp"
            android:textAlignment="center"
            android:id="@+id/title_profile_gadget"
            android:text="@string/updating_title_gadget"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardMaxElevation="5dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Identifier:"
                    android:fontFamily="@font/play_regular"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textColor="@color/green_vibrant"
                    android:textSize="17sp">
                </TextView>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/id_gadget"
                    android:text="@string/updating_identifier"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description:"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:lines="1"
                    android:textSize="17sp">
                </TextView>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/description_gadget"
                    android:text="@string/updating_description"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cost:"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:lines="1"
                    android:textSize="17sp">
                </TextView>
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textColor="@color/green_vibrant"
                    android:fontFamily="@font/play_regular"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:id="@+id/cost_Gadget"
                    android:text="@string/updating_cost"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>
    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="680dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="goBackToYourProfileActivity"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />
    <TextView
        android:id="@+id/question_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/play_regular"
        android:lines="1"
        android:text="Are you sure you want to delete the gadget?"
        android:textAlignment="center"
        android:textColor="@color/green_vibrant"
        android:textSize="17sp"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/deleteGadgetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question_purchase"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="137dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="deleteGadgetOfUser"
        android:text="DELETE"
        android:textColor="@color/green_vibrant"
        android:textSize="25sp"
        android:textStyle="bold" />



</RelativeLayout>