<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_back_dif"
    tools:context=".activities.RankingActivity">
    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="680dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:fontFamily="@font/play_regular"
        android:onClick="goBackToDashBoardActivity"
        android:text="←"
        android:textColor="@color/green_vibrant"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/green_vibrant"
        android:fontFamily="@font/play_regular"
        android:textSize="30sp"
        android:textAlignment="center"
        android:id="@+id/titleRanking"
        android:text="RANKING OF EXPERIENCE"/>
    <LinearLayout
        android:id="@+id/linearWinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/titleRanking">

        <TextView
            android:id="@+id/textTop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:text="TOP 1"
            android:layout_marginLeft="180dp"
            android:textColor="@color/green_vibrant"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearWinnerPicture1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearWinner1">
        <ImageView
            android:id="@+id/FirstWinnerProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:background="@drawable/img_circle"
            app:layout_constraintTop_toBottomOf="@+id/textTop1"
            android:contentDescription="First position!">
        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearEdit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/linearWinnerPicture1">

        <EditText
            android:id="@+id/textEditTop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:textAlignment="center"
            android:textColor="@color/green_vibrant"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/updating_top1">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearWinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEdit1">
        <TextView
            android:id="@+id/textTop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:text="TOP 2"
            android:layout_marginLeft="180dp"

            android:textColor="@color/green_vibrant"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearWinnerPicture2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearWinner2">
        <ImageView
            android:id="@+id/SecondWinnerProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_circle"
            android:layout_marginLeft="160dp"
            app:layout_constraintTop_toBottomOf="@+id/textTop2"
            android:contentDescription="Second position!">
        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/linearWinnerPicture2">

        <EditText
            android:id="@+id/textEditTop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:textAlignment="center"
            android:textColor="@color/green_vibrant"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/updating_top2">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearWinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEdit2">
        <TextView
            android:id="@+id/textTop3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:text="TOP 3"
            android:layout_marginLeft="180dp"
            android:textColor="@color/green_vibrant"
            android:textSize="20sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearWinnerPicture3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearWinner3">
        <ImageView
            android:id="@+id/ThirdWinnerProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/img_circle"
            app:layout_constraintTop_toBottomOf="@+id/textTop3"
            android:layout_marginLeft="160dp"
            android:contentDescription="Third position!">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearEdit3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/linearWinnerPicture3">

        <EditText
            android:id="@+id/textEditTop3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/play_regular"
            android:textAlignment="center"
            android:textColor="@color/green_vibrant"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/updating_top3">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearEdit3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Whole classification"
            android:onClick="seeAllClassification"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:fontFamily="@font/play_regular"
            android:textColor="@color/green_vibrant"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="100dp">

        </Button>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_below="@+id/linearWinner3">
    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>